# cwc_rtk

./: CMakeLists.txt  README.md  package.xml
launch/: ntrip_ros.launch  receive_correction_and_send_to_serial.launch
scripts/: combined.py  ntripclient.py  receiving_rtk.py
